cmake_minimum_required(VERSION 3.9)
project(March_Challenge_2018_DIV_2)

set(CMAKE_CXX_STANDARD 11)

add_executable(March_Challenge_2018_DIV_2 main.cpp)
add_executable(main main.cpp)
add_executable(Minion Chef and Bananas "Minion Chef and Bananas.cpp")
add_executable(A Big Sale "A Big Sale.cpp")
add_executable(Minion Chef and Bananas Final "Minion Chef and Bananas Final.cpp")